--- a/src/Busybee/InstituteBundle/Resources/views/SpecialDays/specialDayScript.html.twig
+++ b/src/Busybee/InstituteBundle/Resources/views/SpecialDays/specialDayScript.html.twig
@@ -1,6 +1,4 @@
-{% trans_default_domain "BusybeeInstituteBundle" %}
-
-<script type="text/javascript" language="JavaScript">
+<script language="JavaScript" type="text/javascript">
     if ($(".fadeAlert{{ name }}").length) {
         $(".fadeAlert{{ name }}").fadeOut(3000);
     }
