--- a/src/Busybee/InstituteBundle/Resources/views/Calendar/calendar.html.twig
+++ b/src/Busybee/InstituteBundle/Resources/views/Calendar/calendar.html.twig
@@ -10,7 +10,7 @@
 {% form_theme form
 'BusybeeFormBundle:Template:jquery.collection.html.twig'
 '@BusybeeInstitute/Term/term.html.twig'
-'@BusybeeInstitute/Calendar/specialDay.html.twig'
+'@BusybeeInstitute/SpecialDays/specialDay.html.twig'
 '@BusybeeInstitute/Grade/grade.html.twig'
 'BusybeeFormBundle:Template:bootstrap.html.twig' %}
 
@@ -78,37 +78,14 @@
 		}
 
 
-        $(".specialDayList").collection({
-            name_prefix: '{{ form.specialDays.vars.full_name }}',
-            allow_up: false,
-            allow_down: false,
-            add: '<button title="{{ 'year.specialday.add'|trans({}, 'BusybeeInstituteBundle') }}" type="button" class="halflings halflings-plus-sign btn btn-primary" style="float: right;"></button>',
-            remove: '<button title="{{ 'year.specialday.remove'|trans({}, 'BusybeeInstituteBundle') }}" type="button" class="halflings halflings-erase btn btn-warning" style="float: right;"></button>',
-            add_at_the_end: true
-        });
-
-        {% for error in form.vars.errors %}
-        {% if error.messageTemplate in ['year.specialDay.error.delete', 'year.specialDay.error.timeEmpty', 'year.specialDay.error.timeInvalid'] %}
-        $("#specialDayMessage").html('<p class="alert alert-danger">{{ error.message }}</p>');
-        $("#specialDayMessage").fadeIn(1000);
-        {% endif %}
-        {% endfor %}
-
-
+        function clearTabActive() {
+            $('#year').removeClass('active');
+            $('#terms').removeClass('active');
+            $('#specialDays').removeClass('active');
+            $('#grades').removeClass('active');
+        }
 	</script>
     {% include '@BusybeeInstitute/Grade/gradesScript.html.twig' %}
     {% include '@BusybeeInstitute/Term/termScript.html.twig' %}
-    <script type="text/javascript">
-        $(document).ready(function () {
-            var hash = window.location.hash.substr(1);
-            if (hash == 'terms') {
-                var index = $('#calendarTabs a[href="#terms"]').parent();
-                index.prop('class', 'active');
-                $('#year').prop('class', 'tab-pane');
-                $('#terms').prop('class', 'tab-pane active');
-                $('#specialDays').prop('class', 'tab-pane');
-                $('#grades').prop('class', 'tab-pane');
-            }
-        });
-    </script>
+    {% include "@BusybeeInstitute/SpecialDays/specialDaysScript.html.twig" %}
 {% endblock javascripts %}
