--- a/src/Busybee/InstituteBundle/Resources/views/Grade/gradesScript.html.twig
+++ b/src/Busybee/InstituteBundle/Resources/views/Grade/gradesScript.html.twig
@@ -15,4 +15,15 @@
     $("#gradeMessage").fadeIn(1000);
     {% endif %}
     {% endfor %}
+
+    $(document).ready(function () {
+        var hash = window.location.hash.substr(1);
+        if (hash == 'grades') {
+            var index = $('#calendarTabs a[href="#grades"]').parent();
+            index.prop('class', 'active');
+            clearTabActive();
+            $('#grades').addClass('active');
+        }
+    });
+
 </script>
