--- a/src/Busybee/InstituteBundle/Resources/views/Term/termScript.html.twig
+++ b/src/Busybee/InstituteBundle/Resources/views/Term/termScript.html.twig
@@ -25,4 +25,14 @@
     {% endif %}
     {% endfor %}
 
+    $(document).ready(function () {
+        var hash = window.location.hash.substr(1);
+        if (hash == 'terms') {
+            var index = $('#calendarTabs a[href="#terms"]').parent();
+            index.prop('class', 'active');
+            clearTabActive();
+            $('#terms').addClass('active');
+        }
+    });
+
 </script>
