--- a/src/Busybee/HomeBundle/Resources/views/Page/panelStart.html.twig
+++ b/src/Busybee/HomeBundle/Resources/views/Page/panelStart.html.twig
@@ -14,6 +14,10 @@
     {% set name = 'Default' %}
 {% endif %}
 
+{% if name is not iterable %}
+    {% set name = {'%name%': name} %}
+{% endif %}
+
 {% if h3Content is not defined %}
     {% set h3Content = '' %}
 {% endif %}
@@ -24,7 +28,7 @@
 
 <div class="panel panel-{{ panelStyle }} busybee-panel">
     <div class="panel-heading">
-        <h3 class="panel-title">{{ header|trans({'%name%': name}) }}
+        <h3 class="panel-title">{{ header|trans(name) }}
             {{ h3Content|raw }}
         </h3>
         {% if panelParagraph is defined %}
@@ -32,4 +36,5 @@
         {% endif %}
     </div>
     <div class="panel-body">
-{#</div>#}
+{#</div>
+</div>#}
