--- a/src/Busybee/TimeTableBundle/Resources/views/LearningGroups/manage.html.twig
+++ b/src/Busybee/TimeTableBundle/Resources/views/LearningGroups/manage.html.twig
@@ -10,6 +10,10 @@
 {% block headerTitle %}{{ 'learninggroups.title.manage'|trans }}{% endblock headerTitle %}
 {% block headerLead %}{{ 'learninggroups.description.manage'|trans }}{% endblock headerLead %}
 
+{% block stylesheets %}
+    {{ parent() }}
+    {% include '@BusybeeHome/Toggle/style.html.twig' %}
+{% endblock stylesheets %}
 
 {% block contentContainer %}
     {{ form_start(form) }}
@@ -37,14 +41,35 @@
                         {{ form_row(form.course) }}
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col-sm-6 well">
+                        {{ form_row(form.participants) }}
+                    </div>
+                    <div class="col-sm-6 well">
+                        {{ form_row(form.includeAll) }}
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-6 col-sm-offset-6 well">
+                        <div>
+                            {{ miscButton({'class': 'btn btn-info halflings halflings-tick', 'windowOpen': {'route': path('learning_group_test', {'id': app.request.get('id')})}})|raw }}
+                            <label class="control-label">{{ 'learninggroups.label.test'|trans }}</label><br>
+                            <span class="field-help">{{ 'learninggroups.help.test'|trans }}</span>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="col-sm-6">
-                {% if form.activities is defined %}
-                    {% set h3Content = '' %}
-                    {% include '@BusybeeHome/Page/panelStart.html.twig' with {'header': form.activities.vars.label, 'transDomain': 'BusybeeTimeTableBundle', 'panelParagraph': form.activities.vars.attr.help, 'panelStyle': 'info'} %}
-                    {{ form_widget(form.activities) }}
-                    {% include '@BusybeeHome/Page/panelEnd.html.twig' %}
-                {% endif %}
+                <div class="row">
+                    <div class="col-sm-12">
+                        {% if form.activities is defined %}
+                            {% set h3Content = '' %}
+                            {% include '@BusybeeHome/Page/panelStart.html.twig' with {'header': form.activities.vars.label, 'transDomain': 'BusybeeTimeTableBundle', 'panelParagraph': form.activities.vars.attr.help, 'panelStyle': 'info'} %}
+                            {{ form_widget(form.activities) }}
+                            {% include '@BusybeeHome/Page/panelEnd.html.twig' %}
+                        {% endif %}
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -57,4 +82,11 @@
     {{ parent() }}
     {% include '@BusybeeForm/Scripts/jquery.collection.js.html.twig' %}
     {% include '@BusybeeTimeTable/Activities/activityScript.html.twig' %}
+    {% include '@BusybeeHome/Toggle/script.html.twig' %}
+    <script type="text/javascript" language="JavaScript">
+        $('.testLG').click(function (e) {
+            var path = '{{ path('learning_group_test', {'id': '__id__'}) }}';
+            path = path.replace('__id__', '{{ app.request.get('id') }}');
+        })
+    </script>
 {% endblock javascripts %}
