End of Day 1st May 2017 Added Small popup css / template Pagination can now capture limit on transfer if route allows Removed Student Status / Now in Student Grade information Added limit to person mange/edit routes Added Locker to Student Test for duplicate students in Learning Groups
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/HomeBundle/Resources/views/Default/template.html.twig
+++ b/src/Busybee/HomeBundle/Resources/views/Default/template.html.twig
@@ -5,10 +5,13 @@
 <!DOCTYPE html >
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	<title>{{ get_setting('org.name', 'Busybee') }} - {% block title %}{% endblock title %} on Busybee</title>
 
-{% block stylesheets %}{% include 'BusybeeHomeBundle:Default:style.html.twig' %}{% endblock stylesheets %}
+    {% block stylesheets %}
+        {% include 'BusybeeHomeBundle:Default:style.html.twig' %}
+    {% endblock stylesheets %}
+
     {% set containerThemeOverwrite = '' %}
     {% set headerNotices = '' %}
     {% if app.user is not null %}
