--- a/src/Busybee/StudentBundle/Resources/views/Activity/edit.html.twig
+++ b/src/Busybee/StudentBundle/Resources/views/Activity/edit.html.twig
@@ -15,7 +15,11 @@
 
 {% block contentContainer %}
     {% set transDomain = 'BusybeeStudentBundle' %}
-    {% set h3Content = returnButton({'windowOpen': {'route': path('student_activities', {'currentSearch': currentSearch})}})|raw %}
+    {% if currentSearch == '_closeWindow' %}
+        {% set h3Content = closeButton()|raw %}
+    {% else %}
+        {% set h3Content = returnButton({'windowOpen': {'route': path('student_activities', {'currentSearch': currentSearch})}})|raw %}
+    {% endif %}
     {% if app.request.get('id') != 'Add' %}
         {% set h3Content = h3Content ~ addButton({'windowOpen': {'route': path('student_activity_edit', {'id': 'Add', 'currentSearch': currentSearch})}})|raw %}
     {% endif %}
