--- a/src/Busybee/StudentBundle/Resources/views/Person/student.html.twig
+++ b/src/Busybee/StudentBundle/Resources/views/Person/student.html.twig
@@ -3,30 +3,33 @@
 {% trans_default_domain "BusybeeStudentBundle" %}
 
 <div class="panel panel-primary busybee-panel">
-    {% include '@BusybeePerson/Person/panelHeader.html.twig' with {'header': 'family.title.contacts'} %}
+    {% include '@BusybeePerson/Person/panelHeader.html.twig' with {'header': 'person.student.title', 'transDomain': 'BusybeePersonBundle'} %}
     <div class="panel-body">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-sm-4 well">
+                <div class="col-sm-3 well">
                     {{ form_widget(form.student.person) }}
                     {{ form_row(form.student.startAtSchool) }}
                 </div>
-                <div class="col-sm-4 well">
+                <div class="col-sm-3 well">
                     {{ form_row(form.student.startAtThisSchool) }}
                 </div>
-                <div class="col-sm-4 well">
+                <div class="col-sm-3 well">
                     {{ form_row(form.student.lastAtThisSchool) }}
+                </div>
+                <div class="col-sm-3 well">
+                    {{ form_row(form.student.house) }}
                 </div>
             </div>
             <div class="row">
                 <div class="col-sm-4 well">
-                    {{ form_row(form.student.status) }}
-                </div>
-                <div class="col-sm-4 well">
                     {{ form_row(form.student.countryOfBirth) }}
                 </div>
                 <div class="col-sm-4 well">
-                    {{ form_row(form.student.house) }}
+                    {{ form_row(form.student.ethnicity) }}
+                </div>
+                <div class="col-sm-4 well">
+                    {{ form_row(form.student.religion) }}
                 </div>
             </div>
             <div class="row">
@@ -42,14 +45,8 @@
             </div>
             <div class="row">
                 <div class="col-sm-4 well">
-                    {{ form_row(form.student.ethnicity) }}
-                </div>
-                <div class="col-sm-4 well">
-                    {{ form_row(form.student.religion) }}
-                </div>
-                <div class="col-sm-4">
+                    {{ form_row(form.student.locker) }}
                 </div>
             </div>
         </div>
         {% include '@BusybeeHome/Page/panelEnd.html.twig' %}
-
