--- a/src/Busybee/TimeTableBundle/Resources/views/LearningGroups/report.html.twig
+++ b/src/Busybee/TimeTableBundle/Resources/views/LearningGroups/report.html.twig
@@ -1,1 +1,11 @@
-{{ report|raw }}
+{% trans_default_domain "BusybeeTimeTableBundle" %}
+
+{% extends '@BusybeeHome/Popup/template.html.twig' %}
+
+{% block title %}{{ parent() }}{{ 'learninggroups.title.report'|trans }}{% endblock title %}
+
+{% block contentContainer %}
+    {% include '@BusybeeTimeTable/LearningGroups/report-content.html.twig' %}
+    {{ closeButton()|raw }}
+    {{ resetButton({'windowOpen': {'route': path('learning_group_test', {'id': app.request.get('id')})}})|raw }}
+{% endblock contentContainer %}
