End of Day 3rd May 2017 Added Limit Choices to Pagination Added prompt to buttons Added pagination limits to People Management pages
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/PaginationBundle/Resources/views/Default/index.html.twig
+++ b/src/Busybee/PaginationBundle/Resources/views/Default/index.html.twig
@@ -6,10 +6,11 @@
 
 {% form_theme form 'bootstrap_3_horizontal_layout.html.twig' %}
 
-
 {% if form_array is not defined %}
     {% set form_array = [] %}
 {% endif %}
+{% set form_array = form_array|merge({'attr': {'id': 'paginator'}}) %}
+
 {{ form_start(form, form_array) }}
 <div class="container-fluid well">
     <div class="row">
@@ -52,7 +53,41 @@
         {% endif %}
     </div>
     <div class="row">
-        <div class="col-sm-12 text-right">
+        <div class="col-sm-6">
+            {% if pagination.choice is defined %}
+                <div>
+                    {% for name,choice in pagination.choice %}
+                        {% set title = 'people.choice.' ~ name ~ '.title' %}
+                        {% set label = 'people.choice.' ~ name ~ '.label' %}
+
+                        {% set title = title|trans %}
+                        {% set label = label|trans %}
+
+                        {% set values = app.request.get('paginator') %}
+
+                        {% if values['choice'] is defined %}
+                            {% set values = values['choice'] %}
+                        {% else %}
+                            {% set values = {'all': 'on'} %}
+                        {% endif %}
+
+                        {% set toggle = 'data-toggle=toggle data-onstyle=success data-offstyle=warning data-height=25 data-size=small data-on="' ~ label ~ '" data-off="' ~ label ~ '"' %}
+                        {% set checked = '' %}
+                        {% if values[name] is defined %}
+                            {% set checked = 'checked' %}
+                        {% endif %}
+                        <label class="checkbox-inline">
+                            <input type="checkbox" name="paginator[choice][{{ name }}]"
+                                   id="pagination_choice_{{ name }}"
+                                   title="{{ title }}"
+                                   class="choice{{ name }}Toggle paginationChoice" {{ toggle|raw }} {{ checked }} />
+                        </label>
+                    {% endfor %}
+                </div>
+
+            {% endif %}
+        </div>
+        <div class="col-sm-6 text-right">
             {% set pages = pagination.getTotalPages %}
 
             {% transchoice pages with {'%total%': pagination.getTotal, '%current%': pagination.getCurrentPage, '%pages%': pages, '%first%': pagination.getFirstRecord, '%last%': pagination.getLastRecord} %}
