--- a/web/css/main.css
+++ b/web/css/main.css
@@ -236,15 +236,20 @@ ul.nav li.disabled {
 .panel-heading p {
     margin: 5px 0 -5px 0;
 }
-
 @keyframes blink {
     50% {
         border-bottom: 3px SOLID #F0AD4E;
         border-radius: 0px;
     }
 }
-
 .containerWarning {
     animation: blink 1.0s step-end infinite alternate;
     border-bottom: 3px solid transparent;
+}
+
+.buttonPrompt {
+    font-size: 11px;
+    max-height: 30px;
+    margin-top: 1px;
+
 }
