--- a/src/Busybee/PersonBundle/Resources/views/Person/index.html.twig
+++ b/src/Busybee/PersonBundle/Resources/views/Person/index.html.twig
@@ -14,14 +14,17 @@
 {% endblock stylesheets %}
 
 {% block contentContainer %}
-	{% include 'PaginationBundle:Default:index.html.twig' with {'form_array': {'action': path('person_manage') } } %}
+    {% block paginationContent %}
+        {% include 'PaginationBundle:Default:index.html.twig' with {'form_array': {'action': path('person_manage') } } %}
+    {% endblock paginationContent %}
     {% set transDomain = 'BusybeePersonBundle' %}
 
     {% set h3Content = addButton({'windowOpen': {'route': path('person_edit', {'id': 'Add', 'currentSearch': pagination.search|replace({'%': ''}), 'limit': pagination.limit})}})|raw %}
 
     {% set h3Content = h3Content ~ uploadButton({'type': 'button', 'transDomain': transDomain, 'title': 'person.title.import', 'windowOpen': {'route': path('people_import')}})|raw %}
 
-    {% include '@BusybeeHome/Page/panelStart.html.twig' with {'header': 'people.title'} %}
+    {% if header is not defined %}{% set header = 'people.title' %}{% endif %}
+    {% include '@BusybeeHome/Page/panelStart.html.twig' with {'header': header} %}
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-12 col-sm-12" id="peopleError">
@@ -221,7 +224,60 @@
                     $(".fadeAlert").fadeOut(5000);
                 }
             })
-        })
-	</script>
+        });
+
+        {% if pagination.choice is defined %}
+
+        $('.paginationChoice').change(function () {
+            var id = $(this).prop('id');
+            id = id.replace('pagination_choice_', '');
+
+            var checked = $(this).is(':checked');
+            if (checked) {
+                if (id == 'student') {
+                    $('#paginator').prop('action', '{{ path(pagination.choice['student'][1]) }}');
+                    $('#pagination_choice_staff').prop('checked', false);
+                    $('#pagination_choice_all').prop('checked', false);
+                    $('#pagination_choice_contact').prop('checked', false);
+                }
+                if (id == 'all') {
+                    $('#paginator').prop('action', '{{ path(pagination.choice['all'][1]) }}');
+                    $('#pagination_choice_staff').prop('checked', false);
+                    $('#pagination_choice_student').prop('checked', false);
+                    $('#pagination_choice_contact').prop('checked', false);
+                }
+                if (id == 'staff') {
+                    $('#paginator').prop('action', '{{ path(pagination.choice['staff'][1]) }}');
+                    $('#pagination_choice_student').prop('checked', false);
+                    $('#pagination_choice_all').prop('checked', false);
+                    $('#pagination_choice_contact').prop('checked', false);
+                }
+                if (id == 'contact') {
+                    $('#paginator').prop('action', '{{ path(pagination.choice['contact'][1]) }}');
+                    $('#pagination_choice_student').prop('checked', false);
+                    $('#pagination_choice_all').prop('checked', false);
+                    $('#pagination_choice_staff').prop('checked', false);
+                }
+            } else {
+                if (id == 'student') {
+                    $('#paginator').prop('action', '{{ path(pagination.choice['student'][0]) }}');
+                }
+                if (id == 'staff') {
+                    $('#paginator').prop('action', '{{ path(pagination.choice['staff'][0]) }}');
+                }
+                if (id == 'all') {
+                    $('#paginator').prop('action', '{{ path(pagination.choice['all'][0]) }}');
+                }
+                if (id == 'contact') {
+                    $('#paginator').prop('action', '{{ path(pagination.choice['contact'][0]) }}');
+                }
+                $('.paginationChoice').prop('checked', false)
+            }
+            $('#paginator').submit();
+        });
+
+        {% endif %}
+
+    </script>
 {% endblock javascripts %}
 
