--- a/src/Busybee/TimeTableBundle/Resources/views/LearningGroups/list.html.twig
+++ b/src/Busybee/TimeTableBundle/Resources/views/LearningGroups/list.html.twig
@@ -11,7 +11,7 @@
 {% block contentContainer %}
     {% include 'PaginationBundle:Default:index.html.twig' %}
     {% set h3Content = addButton({'title': 'learninggroups.title.add', 'transDomain': 'BusybeeTimeTableBundle', 'windowOpen': {'route': path('learning_group_manage', {'id': 'Add', 'currentSearch': pagination.search|replace({'%': ''})})}}) %}
-    {% include '@BusybeeHome/Page/panelStart.html.twig' with {'header': 'learninggroups.title.list', 'transDomain': 'BusybeeTimeTableBundle', 'panelParagraph': 'timetable.description.list'} %}
+    {% include '@BusybeeHome/Page/panelStart.html.twig' with {'header': 'learninggroups.title.list', 'transDomain': 'BusybeeTimeTableBundle'} %}
     <div class="container-fluid well">
         <div class="row row-header">
             <div class="col-sm-3" style="display: inline-block;">
